--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="versionName">Beta 2</string>
     <string name="next25">Dalších 25</string>
     <string name="activities">Aktivity</string>
+    <string name="requireGps">Vyžadovat gps</string>
+    <string name="enableGps">Zapnout gps?</string>
 
 </resources>
