bedynky v layoutech (ne uplne hezky)

--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="renewLocationLabel">Načíst pozici</string>
     <string name="realLocation">reálná</string>
     <string name="virtualLocation">zadaná</string>
-    <string name="versionName">1.1 RC1</string>
+    <string name="versionName">2 RC1</string>
     <string name="next25">Dalších 25</string>
     <string name="activities">Aktivity</string>
     <string name="requireGps">Vyžadovat gps</string>
@@ -61,5 +61,9 @@
     <string name="list_activity_name">SEZNAM</string>
     <string name="bookmarks_activity_name">OBLÍBENÉ</string>
     <string name="app_name_uppercase">ADRESÁŘ FARMÁŘŮ</string>
+    <string name="customContainerDistribution">Rozvoz</string>
+    <string name="containerDistributionTime">Výdejní čas</string>
+    <string name="containers">Bedýnky</string>
+    <string name="containerDistributionPlaces">Výdejní místa</string>
 
 </resources>
