--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="web">web</string>
     <string name="email">E-Mail</string>
     <string name="production">Produkce</string>
-    <string name="search_hint">Hledej produkt, farmu, …</string>
+    <string name="search_hint">Hledej produkt, farmu…</string>
     <string name="description">Popis</string>
     <string name="phone">Telefon</string>
     <string name="address">Adresa</string>
