--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="app_name">Adresář farmářů</string>
     <string name="city">Město</string>
     <string name="farm_name">Název</string>
+    <string name="add_farm">Přidat farmu</string>
     <string name="here_fill_farm_name">zde napište celý název farmy</string>
     <string name="coordinates">Souřadnice GPS</string>
     <string name="lat">délka</string>
