--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="other_she_form">jiná</string>
     <string name="email">E-Mail</string>
     <string name="production">Produkce</string>
+    <string name="product">Produkt</string>
+    <string name="activity">Aktivita</string>
     <string name="search_hint">Hledej produkt, farmu…</string>
     <string name="description">Popis</string>
     <string name="phone">Telefon</string>
