details layout updated, pickup places add/remove implemented

--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="pickup">Odběr</string>
     <string name="containers">Bedýnky</string>
     <string name="containerDistributionPlaces">Výdejní místa</string>
+    <string name="placeAndTime">Místo a čas</string>
 
 </resources>
