--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -89,6 +89,8 @@
     <string name="editorContact">Kontakt na Vás</string>
     <string name="placeAndTime">Místo a čas</string>
     <string name="emailNonValid">E-mail není validní</string>
+    <string name="eshopNonValid">E-shop není validní URL</string>
+    <string name="webNonValid">Web není validní URL</string>
     <string name="invalidCoordinates">Gps souřadnice nejsou validní</string>
     <string name="invalidForm">Chyba v formuláři</string>
     <string name="fillInName">"Je třeba vyplnit jméno"</string>
