--- a/BioadresarAndroid/res/values/strings.xml
+++ b/BioadresarAndroid/res/values/strings.xml
@@ -53,7 +53,9 @@
     <string name="about_label">O Aplikaci</string>
     <string name="install_google_play">Tato funkce vyžaduje nainstalované Google Play Services</string>
     <string name="update_start">Aktualizuji databázi</string>
+    <string name="data_up_to_date">Data aktuální</string>
     <string name="update_finished">Databáze aktualizována</string>
+    <string name="data_reload">Restartuji s aktuálními daty</string>
     <string name="config_label">Nastavení</string>
     <string name="config_summary">Chování aplikace po startu</string>
     <string name="homepage">http://trilobajt.cz/adresar</string>
@@ -73,7 +75,6 @@
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
     <string name="virtualLocation">zadaná</string>
-    <string name="versionName">1.4</string>
     <string name="next25">Dalších 25</string>
     <string name="activities">Aktivity</string>
     <string name="requireGps">Vyžadovat gps</string>
